Wed Dec 17 11:08:08 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* TAO_IDL/be/be_visitor_interface/interface_ss.cpp:

	  Fixed a typo while generating repository id's for _is_a ()
	  calls. Thanks to Terry Ware <terry.ware@dc.alphatech.com> for
	  reporting the problem.

Wed Dec 17 09:26:14 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* orbsvcs/orbsvcs/FaultTolerance.mpc:

	  Fixed a typo that prevented the library from building.

Tue Dec 16 07:52:43 2003  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

	* tao/default_resource.cpp (get_reactor): Changed
	
	  if (ACE_LOG_MSG->errnum ())
	  
	  to 
	  
	  if (!reactor->initialized ())
	  
	  since the latter is more robust.  Thanks to John Fletcher
 	  <john.fletcher@rd.bbc.co.uk> and Johnny Willemsen for motivating
 	  this.

Tue Dec 16 12:08:13 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

	* tests/Portable_Interceptors/Collocated/Dynamic/Portable_Interceptors_Dynamic.mpc:
          Corrected exe name to match run_test.pl and removed not needed libpaths

Mon Dec 15 19:46:30 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* orbsvcs/orbsvcs/Notify/Method_Request_Dispatch_T.inl:

	  #include Consumer.h to get arounda compile error in aCC. Thanks
 	  to Pierre Pacchioni <pierre.pacchioni@avisto.com> for suggesting
 	  the fix.

Mon Dec 15 13:34:38 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tao/default_resource.cpp:

	  Use errno, instead of using ACE_Log_Msg->errnum (). Thanks to
	  John Fletcher <john.fletcher@rd.bbc.co.uk> for reporting a
	  problem related to this.

Mon Dec 15 09:30:28 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* orbsvcs/tests/RTCosScheduling/RTCosScheduling.mpc:
	* performance-tests/RTCorba/Thread_Pool/Thread_Pool.mpc:
	* tests/RTCORBA/Priority_Inversion_With_Bands/Priority_Inversion_With_Bands.mpc:
          Do not build these tests when minimum_corba is enabled.	  
