@@ -891,7 +891,7 @@ CORBA::Boolean POA_CORBA::DomainManager::_is_a (
         ) ||
       !ACE_OS::strcmp (
           (char *)value,
-          "IDL:org.omg/CORBA/Object:1.0"
+          "IDL:omg.org/CORBA/Object:1.0"
         )
      )
     {
@@ -1766,7 +1766,7 @@ CORBA::Boolean POA_CORBA::ConstructionPolicy::_is_a (
         ) ||
       !ACE_OS::strcmp (
           (char *)value,
-          "IDL:org.omg/CORBA/Object:1.0"
+          "IDL:omg.org/CORBA/Object:1.0"
         )
      )
     {
