@@ -3567,7 +3567,7 @@ CORBA::Boolean POA_ImplementationRepository::Locator::_is_a (
         ) ||
       !ACE_OS::strcmp (
           (char *)value,
-          "IDL:org.omg/CORBA/Object:1.0"
+          "IDL:omg.org/CORBA/Object:1.0"
         )
      )
     {
